<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="celik.abdullah.authentication.viewmodel.ChangePasswordFragmentViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:nextFocusDown="@id/editText_new_password"
                android:imeOptions="actionNext"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/purple_700"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="3dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:nextFocusDown="@id/changePassword"
                android:imeOptions="actionDone"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/purple_700"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="3dp"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/editText_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/changePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeWidth="3dp"
                app:backgroundTint="@color/white"
                app:strokeColor="@color/purple_700"
                android:text="@string/send"
                android:textSize="20sp"
                android:textColor="@color/silver"
                android:textStyle="bold"
                android:clickable="false"
                android:onClick="@{() -> viewModel.resetPassword()}"
                app:layout_constraintTop_toBottomOf="@id/editText_new_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</layout>